--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/busca-vacina?serverTimezone=America/Sao_Paulo&useSSL=false
 spring.datasource.username= root
-spring.datasource.password=mysql2019
+spring.datasource.password=########
 
 #porta
 server.port=8080
